correccion de dependencias

--- a/src/app/features/intro/intro.component.html
+++ b/src/app/features/intro/intro.component.html
@@ -1,5 +1,5 @@
 <!-- // src/app/features/intro/intro.component.html -->
-<app-location-modal 
+<app-location-modal
   [isVisible]="showLocationModal" 
   (closed)="onLocationModalClosed($event)">
 </app-location-modal>
@@ -19,7 +19,7 @@
       </p>
       
       <div class="nolan-preview">
-        <img src="assets/images/nolan-diagram-preview.svg" alt="Diagrama de Nolan" class="nolan-image">
+        <img src="assets/images/nolan-diagram-preview.png" alt="Diagrama de Nolan" class="nolan-image">
       </div>
       
       <h2>¿Cómo funciona el Diagrama de Nolan?</h2>
