--- a/src/app/features/results/results.component.html
+++ b/src/app/features/results/results.component.html
@@ -100,10 +100,10 @@
           <div class="answer-content">
             <h3 class="answer-question">{{ answer.question }}</h3>
             <p class="answer-text">{{ answer.answer }}</p>
-            <div class="answer-scores">
+            <!-- <div class="answer-scores">
               <span class="score economic">Económico: {{ answer.economicScore }}</span>
               <span class="score personal">Personal: {{ answer.personalScore }}</span>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
